# assistants-demo

./: .env.example  README.md  langgraph.json  pyproject.toml
agents/react_agent/: context.py  graph.py  graph_without_config.py  graph_without_context.py  tools.py
agents/supervisor/: subagents.py  supervisor_context.py  supervisor_no_config.py  supervisor_no_context.py  supervisor_prebuilt.py
notebooks/: assistant_test.ipynb
