[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assistants-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.0a10",
    "langchain-anthropic>=1.0.0a1",
    "langchain-community>=0.3.30",
    "langchain-openai>=1.0.0a2",
    "langgraph>=1.0.0a4",
    "langgraph-supervisor>=0.0.28",
    "yfinance>=0.2.66",
]

[tool.setuptools.packages.find]
include = ["agents*"]
exclude = ["notebooks*"]
